--- a/public/css/layout/layout.css
+++ b/public/css/layout/layout.css
@@ -15,6 +15,15 @@ nav.navbar{
 #myNavbar ul li a:hover{
     cursor: hand;
 }
+#head-section .modal-content button.sign_in {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
 div#content-main{
     padding-top: 10px;
     padding-bottom: 30px;
